--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,15 @@ main {
 
 .container {
   max-width: 1200px;
-  margin: 0 auto;
   background-color: rgba(0, 0, 0, 0.5);
   padding: 20px;
   border-radius: 10px;
   text-align: center;
+}
+
+.header {
+  text-align: center;
+  align-items: center;
 }
 
 .header h1{
@@ -37,15 +41,18 @@ main {
 
 .header p {
   font-size: 20px;
-  padding: 20px 100px 10px 10px;
+  padding-right: 300px;
+  padding-left: 300px;
 }
 
 .button button {
-  padding: 5px;
+  padding-left: 13px;
+  padding-right: 13px;
   cursor: pointer;
   font-size: 15px;
   border-radius: 10px;
   background: #555;
+  margin: 20px;
 }
 
 button:hover {
@@ -62,4 +69,32 @@ button:hover {
   width: 300px;
   height: 200px;
   border-radius: 10px;
+}
+
+.product{
+  background-color: #222;
+  border-radius: 10px;
+  padding-top: 5px;
+}
+
+.product:hover{
+  background-color: #555;
+  color: #fff;
+}
+
+.vote:hover{
+  color: red;
+}
+
+.vote {
+  color: #555;
+}
+
+.badge-popular {
+  position: absolute;
+  background-color: yellowgreen;
+  padding: 3px 7px;
+  border-radius: 5px;
+  top: 260px;
+  left: 300px;
 }
