--- a/css/style.css
+++ b/css/style.css
@@ -121,3 +121,19 @@ button:hover {
   display: flexbox;
   left: 500px;
 }
+
+@media screen and (max-width:576px){
+  .prdct-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+  }
+}
+
+@media screen and (min-width:576px) and (max-width:992px){
+  .prdct-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
+  }
+}
